mobile font a little larger, centered write up nav on mobile, attempt to fix button sizing on write up page on mobile

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h3 {
 }
 
 p {
-  font-size: 0.75em;
+  font-size: 0.85em;
   line-height: 1.7em;
 }
 
@@ -100,7 +100,13 @@ button:hover {
 .nav-container {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
+}
+
+@media (min-width: 800px) {
+  .nav-container {
+    justify-content: flex-end;
+  }
 }
 
 nav {
@@ -627,5 +633,5 @@ textarea {
   justify-content: space-around;
   align-items: center;
   margin-bottom: 5%;
-  width: 50%;
+  width: 70%;
 }
